tests/type_errors/sort_variants.nos
# expect: [Red, Green, Blue]
# Variants auto-derive Ord by declaration order (not alphabetical)
type Color = Red | Green | Blue
main() = [Red, Green, Blue].sort()
